@@ -4,8 +4,6 @@
 
 package io.airbyte.config.persistence;
 
-import static org.mockito.Mockito.mock;
-
 import com.fasterxml.jackson.databind.JsonNode;
 import io.airbyte.commons.enums.Enums;
 import io.airbyte.commons.json.Jsons;
@@ -18,46 +16,77 @@ import io.airbyte.config.StandardWorkspace;
 import io.airbyte.config.State;
 import io.airbyte.config.StateType;
 import io.airbyte.config.StateWrapper;
-import io.airbyte.config.persistence.split_secrets.JsonSecretsProcessor;
-import io.airbyte.db.factory.DSLContextFactory;
-import io.airbyte.db.factory.FlywayFactory;
+import io.airbyte.db.ExceptionWrappingDatabase;
 import io.airbyte.db.init.DatabaseInitializationException;
-import io.airbyte.db.instance.configs.ConfigsDatabaseMigrator;
-import io.airbyte.db.instance.configs.ConfigsDatabaseTestProvider;
 import io.airbyte.protocol.models.AirbyteGlobalState;
 import io.airbyte.protocol.models.AirbyteStateMessage;
 import io.airbyte.protocol.models.AirbyteStateMessage.AirbyteStateType;
 import io.airbyte.protocol.models.AirbyteStreamState;
 import io.airbyte.protocol.models.StreamDescriptor;
-import io.airbyte.test.utils.DatabaseConnectionHelper;
 import io.airbyte.validation.json.JsonValidationException;
 import java.io.IOException;
+import java.sql.SQLException;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 import org.jooq.JSONB;
-import org.jooq.SQLDialect;
 import org.jooq.impl.DSL;
-import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
+class StatePersistenceTest extends BaseConfigDatabaseTest {
 
-  private ConfigRepository configRepository;
   private StatePersistence statePersistence;
   private UUID connectionId;
+  private static final String STATE_ONE = "\"state1\"";
+  private static final String STATE_TWO = "\"state2\"";
+  private static final String STATE_WITH_NAMESPACE = "\"state s1.n1\"";
+  private static final String STREAM_STATE_2 = "\"state s2\"";
+  private static final String GLOBAL_STATE = "\"my global state\"";
+  private static final String STATE = "state";
+
+  @BeforeEach
+  void beforeEach() throws DatabaseInitializationException, IOException, JsonValidationException, SQLException {
+    truncateAllTables();
+
+    setupTestData();
+    statePersistence = new StatePersistence(database);
+  }
+
+  private void setupTestData() throws JsonValidationException, IOException {
+    final ConfigRepository configRepository = new ConfigRepository(
+        database,
+        new ActorDefinitionMigrator(new ExceptionWrappingDatabase(database)),
+        new StandardSyncPersistence(database));
+
+    final StandardWorkspace workspace = MockData.standardWorkspaces().get(0);
+    final StandardSourceDefinition sourceDefinition = MockData.publicSourceDefinition();
+    final SourceConnection sourceConnection = MockData.sourceConnections().get(0);
+    final StandardDestinationDefinition destinationDefinition = MockData.publicDestinationDefinition();
+    final DestinationConnection destinationConnection = MockData.destinationConnections().get(0);
+    // we don't need sync operations in this test suite, zero them out.
+    final StandardSync sync = Jsons.clone(MockData.standardSyncs().get(0)).withOperationIds(Collections.emptyList());
+
+    configRepository.writeStandardWorkspaceNoSecrets(workspace);
+    configRepository.writeStandardSourceDefinition(sourceDefinition);
+    configRepository.writeSourceConnectionNoSecrets(sourceConnection);
+    configRepository.writeStandardDestinationDefinition(destinationDefinition);
+    configRepository.writeDestinationConnectionNoSecrets(destinationConnection);
+    configRepository.writeStandardSync(sync);
+
+    connectionId = sync.getConnectionId();
+  }
 
   @Test
-  public void testReadingNonExistingState() throws IOException {
+  void testReadingNonExistingState() throws IOException {
     Assertions.assertTrue(statePersistence.getCurrentState(UUID.randomUUID()).isEmpty());
   }
 
   @Test
-  public void testLegacyReadWrite() throws IOException {
+  void testLegacyReadWrite() throws IOException {
     final StateWrapper state0 = new StateWrapper()
         .withStateType(StateType.LEGACY)
         .withLegacyState(Jsons.deserialize("{\"woot\": \"legacy states is passthrough\"}"));
@@ -87,7 +116,7 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
   }
 
   @Test
-  public void testLegacyMigrationToGlobal() throws IOException {
+  void testLegacyMigrationToGlobal() throws IOException {
     final StateWrapper state0 = new StateWrapper()
         .withStateType(StateType.LEGACY)
         .withLegacyState(Jsons.deserialize("{\"woot\": \"legacy states is passthrough\"}"));
@@ -103,17 +132,17 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
                 .withStreamStates(Arrays.asList(
                     new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName("s1").withNamespace("n2"))
-                        .withStreamState(Jsons.deserialize("\"state1\"")),
+                        .withStreamState(Jsons.deserialize(STATE_ONE)),
                     new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName("s1"))
-                        .withStreamState(Jsons.deserialize("\"state2\""))))));
+                        .withStreamState(Jsons.deserialize(STATE_TWO))))));
     statePersistence.updateOrCreateState(connectionId, newGlobalState);
     final StateWrapper storedGlobalState = statePersistence.getCurrentState(connectionId).orElseThrow();
     assertEquals(newGlobalState, storedGlobalState);
   }
 
   @Test
-  public void testLegacyMigrationToStream() throws IOException {
+  void testLegacyMigrationToStream() throws IOException {
     final StateWrapper state0 = new StateWrapper()
         .withStateType(StateType.LEGACY)
         .withLegacyState(Jsons.deserialize("{\"woot\": \"legacy states is passthrough\"}"));
@@ -127,32 +156,32 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
                 .withType(AirbyteStateType.STREAM)
                 .withStream(new AirbyteStreamState()
                     .withStreamDescriptor(new StreamDescriptor().withName("s1").withNamespace("n1"))
-                    .withStreamState(Jsons.deserialize("\"state s1.n1\""))),
+                    .withStreamState(Jsons.deserialize(STATE_WITH_NAMESPACE))),
             new AirbyteStateMessage()
                 .withType(AirbyteStateType.STREAM)
                 .withStream(new AirbyteStreamState()
                     .withStreamDescriptor(new StreamDescriptor().withName("s2"))
-                    .withStreamState(Jsons.deserialize("\"state s2\"")))));
+                    .withStreamState(Jsons.deserialize(STREAM_STATE_2)))));
     statePersistence.updateOrCreateState(connectionId, newStreamState);
     final StateWrapper storedStreamState = statePersistence.getCurrentState(connectionId).orElseThrow();
     assertEquals(newStreamState, storedStreamState);
   }
 
   @Test
-  public void testGlobalReadWrite() throws IOException {
+  void testGlobalReadWrite() throws IOException {
     final StateWrapper state0 = new StateWrapper()
         .withStateType(StateType.GLOBAL)
         .withGlobal(new AirbyteStateMessage()
             .withType(AirbyteStateType.GLOBAL)
             .withGlobal(new AirbyteGlobalState()
-                .withSharedState(Jsons.deserialize("\"my global state\""))
+                .withSharedState(Jsons.deserialize(GLOBAL_STATE))
                 .withStreamStates(Arrays.asList(
                     new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName("s1").withNamespace("n2"))
-                        .withStreamState(Jsons.deserialize("\"state1\"")),
+                        .withStreamState(Jsons.deserialize(STATE_ONE)),
                     new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName("s1"))
-                        .withStreamState(Jsons.deserialize("\"state2\""))))));
+                        .withStreamState(Jsons.deserialize(STATE_TWO))))));
 
     // Initial write/read loop, making sure we read what we wrote
     statePersistence.updateOrCreateState(connectionId, state0);
@@ -183,20 +212,20 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
   }
 
   @Test
-  public void testGlobalPartialReset() throws IOException {
+  void testGlobalPartialReset() throws IOException {
     final StateWrapper state0 = new StateWrapper()
         .withStateType(StateType.GLOBAL)
         .withGlobal(new AirbyteStateMessage()
             .withType(AirbyteStateType.GLOBAL)
             .withGlobal(new AirbyteGlobalState()
-                .withSharedState(Jsons.deserialize("\"my global state\""))
+                .withSharedState(Jsons.deserialize(GLOBAL_STATE))
                 .withStreamStates(Arrays.asList(
                     new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName("s1").withNamespace("n2"))
-                        .withStreamState(Jsons.deserialize("\"state1\"")),
+                        .withStreamState(Jsons.deserialize(STATE_ONE)),
                     new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName("s1"))
-                        .withStreamState(Jsons.deserialize("\"state2\""))))));
+                        .withStreamState(Jsons.deserialize(STATE_TWO))))));
 
     // Set the initial state
     statePersistence.updateOrCreateState(connectionId, state0);
@@ -207,11 +236,11 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
         .withGlobal(new AirbyteStateMessage()
             .withType(AirbyteStateType.GLOBAL)
             .withGlobal(new AirbyteGlobalState()
-                .withSharedState(Jsons.deserialize("\"my global state\""))
-                .withStreamStates(Arrays.asList(
+                .withSharedState(Jsons.deserialize(GLOBAL_STATE))
+                .withStreamStates(List.of(
                     new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName("s1"))
-                        .withStreamState(Jsons.deserialize("\"state2\""))))));
+                        .withStreamState(Jsons.deserialize(STATE_TWO))))));
     statePersistence.updateOrCreateState(connectionId, incompletePartialReset);
     final StateWrapper incompletePartialResetResult = statePersistence.getCurrentState(connectionId).orElseThrow();
     Assertions.assertEquals(state0, incompletePartialResetResult);
@@ -222,11 +251,11 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
         .withGlobal(new AirbyteStateMessage()
             .withType(AirbyteStateType.GLOBAL)
             .withGlobal(new AirbyteGlobalState()
-                .withSharedState(Jsons.deserialize("\"my global state\""))
+                .withSharedState(Jsons.deserialize(GLOBAL_STATE))
                 .withStreamStates(Arrays.asList(
                     new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName("s1").withNamespace("n2"))
-                        .withStreamState(Jsons.deserialize("\"state1\"")),
+                        .withStreamState(Jsons.deserialize(STATE_ONE)),
                     new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName("s1"))
                         .withStreamState(null)))));
@@ -242,20 +271,20 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
   }
 
   @Test
-  public void testGlobalFullReset() throws IOException {
+  void testGlobalFullReset() throws IOException {
     final StateWrapper state0 = new StateWrapper()
         .withStateType(StateType.GLOBAL)
         .withGlobal(new AirbyteStateMessage()
             .withType(AirbyteStateType.GLOBAL)
             .withGlobal(new AirbyteGlobalState()
-                .withSharedState(Jsons.deserialize("\"my global state\""))
+                .withSharedState(Jsons.deserialize(GLOBAL_STATE))
                 .withStreamStates(Arrays.asList(
                     new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName("s1").withNamespace("n2"))
-                        .withStreamState(Jsons.deserialize("\"state1\"")),
+                        .withStreamState(Jsons.deserialize(STATE_ONE)),
                     new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName("s1"))
-                        .withStreamState(Jsons.deserialize("\"state2\""))))));
+                        .withStreamState(Jsons.deserialize(STATE_TWO))))));
 
     final StateWrapper fullReset = new StateWrapper()
         .withStateType(StateType.GLOBAL)
@@ -269,7 +298,7 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
                         .withStreamState(null),
                     new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName("s1"))
-                        .withStreamState(null)))));;
+                        .withStreamState(null)))));
 
     statePersistence.updateOrCreateState(connectionId, state0);
     statePersistence.updateOrCreateState(connectionId, fullReset);
@@ -278,13 +307,13 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
   }
 
   @Test
-  public void testGlobalStateAllowsEmptyNameAndNamespace() throws IOException {
+  void testGlobalStateAllowsEmptyNameAndNamespace() throws IOException {
     final StateWrapper state0 = new StateWrapper()
         .withStateType(StateType.GLOBAL)
         .withGlobal(new AirbyteStateMessage()
             .withType(AirbyteStateType.GLOBAL)
             .withGlobal(new AirbyteGlobalState()
-                .withSharedState(Jsons.deserialize("\"my global state\""))
+                .withSharedState(Jsons.deserialize(GLOBAL_STATE))
                 .withStreamStates(Arrays.asList(
                     new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName(""))
@@ -299,7 +328,7 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
   }
 
   @Test
-  public void testStreamReadWrite() throws IOException {
+  void testStreamReadWrite() throws IOException {
     final StateWrapper state0 = new StateWrapper()
         .withStateType(StateType.STREAM)
         .withStateMessages(Arrays.asList(
@@ -307,12 +336,12 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
                 .withType(AirbyteStateType.STREAM)
                 .withStream(new AirbyteStreamState()
                     .withStreamDescriptor(new StreamDescriptor().withName("s1").withNamespace("n1"))
-                    .withStreamState(Jsons.deserialize("\"state s1.n1\""))),
+                    .withStreamState(Jsons.deserialize(STATE_WITH_NAMESPACE))),
             new AirbyteStateMessage()
                 .withType(AirbyteStateType.STREAM)
                 .withStream(new AirbyteStreamState()
                     .withStreamDescriptor(new StreamDescriptor().withName("s2"))
-                    .withStreamState(Jsons.deserialize("\"state s2\"")))));
+                    .withStreamState(Jsons.deserialize(STREAM_STATE_2)))));
 
     // Initial write/read loop, making sure we read what we wrote
     statePersistence.updateOrCreateState(connectionId, state0);
@@ -335,7 +364,7 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
   }
 
   @Test
-  public void testStreamPartialUpdates() throws IOException {
+  void testStreamPartialUpdates() throws IOException {
     final StateWrapper state0 = new StateWrapper()
         .withStateType(StateType.STREAM)
         .withStateMessages(Arrays.asList(
@@ -343,12 +372,12 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
                 .withType(AirbyteStateType.STREAM)
                 .withStream(new AirbyteStreamState()
                     .withStreamDescriptor(new StreamDescriptor().withName("s1").withNamespace("n1"))
-                    .withStreamState(Jsons.deserialize("\"state s1.n1\""))),
+                    .withStreamState(Jsons.deserialize(STATE_WITH_NAMESPACE))),
             new AirbyteStateMessage()
                 .withType(AirbyteStateType.STREAM)
                 .withStream(new AirbyteStreamState()
                     .withStreamDescriptor(new StreamDescriptor().withName("s2"))
-                    .withStreamState(Jsons.deserialize("\"state s2\"")))));
+                    .withStreamState(Jsons.deserialize(STREAM_STATE_2)))));
 
     statePersistence.updateOrCreateState(connectionId, state0);
 
@@ -376,7 +405,7 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
                     .withType(AirbyteStateType.STREAM)
                     .withStream(new AirbyteStreamState()
                         .withStreamDescriptor(new StreamDescriptor().withName("s2"))
-                        .withStreamState(Jsons.deserialize("\"state s2\""))))),
+                        .withStreamState(Jsons.deserialize(STREAM_STATE_2))))),
         partialUpdateResult);
 
     // Partial Reset
@@ -393,7 +422,7 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
     assertEquals(
         new StateWrapper()
             .withStateType(StateType.STREAM)
-            .withStateMessages(Arrays.asList(
+            .withStateMessages(List.of(
                 new AirbyteStateMessage()
                     .withType(AirbyteStateType.STREAM)
                     .withStream(new AirbyteStreamState()
@@ -403,7 +432,7 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
   }
 
   @Test
-  public void testStreamFullReset() throws IOException {
+  void testStreamFullReset() throws IOException {
     final StateWrapper state0 = new StateWrapper()
         .withStateType(StateType.STREAM)
         .withStateMessages(Arrays.asList(
@@ -411,12 +440,12 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
                 .withType(AirbyteStateType.STREAM)
                 .withStream(new AirbyteStreamState()
                     .withStreamDescriptor(new StreamDescriptor().withName("s1").withNamespace("n1"))
-                    .withStreamState(Jsons.deserialize("\"state s1.n1\""))),
+                    .withStreamState(Jsons.deserialize(STATE_WITH_NAMESPACE))),
             new AirbyteStateMessage()
                 .withType(AirbyteStateType.STREAM)
                 .withStream(new AirbyteStreamState()
                     .withStreamDescriptor(new StreamDescriptor().withName("s2"))
-                    .withStreamState(Jsons.deserialize("\"state s2\"")))));
+                    .withStreamState(Jsons.deserialize(STREAM_STATE_2)))));
 
     statePersistence.updateOrCreateState(connectionId, state0);
 
@@ -440,7 +469,7 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
   }
 
   @Test
-  public void testInconsistentTypeUpdates() throws IOException {
+  void testInconsistentTypeUpdates() throws IOException, SQLException {
     final StateWrapper streamState = new StateWrapper()
         .withStateType(StateType.STREAM)
         .withStateMessages(Arrays.asList(
@@ -448,12 +477,12 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
                 .withType(AirbyteStateType.STREAM)
                 .withStream(new AirbyteStreamState()
                     .withStreamDescriptor(new StreamDescriptor().withName("s1").withNamespace("n1"))
-                    .withStreamState(Jsons.deserialize("\"state s1.n1\""))),
+                    .withStreamState(Jsons.deserialize(STATE_WITH_NAMESPACE))),
             new AirbyteStateMessage()
                 .withType(AirbyteStateType.STREAM)
                 .withStream(new AirbyteStreamState()
                     .withStreamDescriptor(new StreamDescriptor().withName("s2"))
-                    .withStreamState(Jsons.deserialize("\"state s2\"")))));
+                    .withStreamState(Jsons.deserialize(STREAM_STATE_2)))));
     statePersistence.updateOrCreateState(connectionId, streamState);
 
     Assertions.assertThrows(IllegalStateException.class, () -> {
@@ -462,7 +491,7 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
           .withGlobal(new AirbyteStateMessage()
               .withType(AirbyteStateType.GLOBAL)
               .withGlobal(new AirbyteGlobalState()
-                  .withSharedState(Jsons.deserialize("\"my global state\""))
+                  .withSharedState(Jsons.deserialize(GLOBAL_STATE))
                   .withStreamStates(Arrays.asList(
                       new AirbyteStreamState()
                           .withStreamDescriptor(new StreamDescriptor().withName(""))
@@ -475,16 +504,19 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
 
     // We should be guarded against those cases let's make sure we don't make things worse if we're in
     // an inconsistent state
-    dslContext.insertInto(DSL.table("state"))
-        .columns(DSL.field("id"), DSL.field("connection_id"), DSL.field("type"), DSL.field("state"))
-        .values(UUID.randomUUID(), connectionId, io.airbyte.db.instance.configs.jooq.generated.enums.StateType.GLOBAL, JSONB.valueOf("{}"))
-        .execute();
+    database.transaction(ctx -> {
+      ctx.insertInto(DSL.table(STATE))
+          .columns(DSL.field("id"), DSL.field("connection_id"), DSL.field("type"), DSL.field(STATE))
+          .values(UUID.randomUUID(), connectionId, io.airbyte.db.instance.configs.jooq.generated.enums.StateType.GLOBAL, JSONB.valueOf("{}"))
+          .execute();
+      return null;
+    });
     Assertions.assertThrows(IllegalStateException.class, () -> statePersistence.updateOrCreateState(connectionId, streamState));
     Assertions.assertThrows(IllegalStateException.class, () -> statePersistence.getCurrentState(connectionId));
   }
 
   @Test
-  public void testEnumsConversion() {
+  void testEnumsConversion() {
     // Making sure StateType we write to the DB and the StateType from the protocols are aligned.
     // Otherwise, we'll have to dig through runtime errors.
     Assertions.assertTrue(Enums.isCompatible(
@@ -493,75 +525,20 @@ public class StatePersistenceTest extends BaseDatabaseConfigPersistenceTest {
   }
 
   @Test
-  public void testStatePersistenceLegacyReadConsistency() throws IOException {
-    final JsonNode jsonState = Jsons.deserialize("{\"my\": \"state\"}");
-    final State state = new State().withState(jsonState);
-    configRepository.updateConnectionState(connectionId, state);
-
-    final StateWrapper readStateWrapper = statePersistence.getCurrentState(connectionId).orElseThrow();
-    Assertions.assertEquals(StateType.LEGACY, readStateWrapper.getStateType());
-    Assertions.assertEquals(state.getState(), readStateWrapper.getLegacyState());
-  }
-
-  @Test
-  public void testStatePersistenceLegacyWriteConsistency() throws IOException {
+  void testStatePersistenceLegacyWriteConsistency() throws IOException, SQLException {
     final JsonNode jsonState = Jsons.deserialize("{\"my\": \"state\"}");
     final StateWrapper stateWrapper = new StateWrapper().withStateType(StateType.LEGACY).withLegacyState(jsonState);
     statePersistence.updateOrCreateState(connectionId, stateWrapper);
 
     // Making sure we still follow the legacy format
-    final List<State> readStates = dslContext
-        .selectFrom("state")
+    final List<State> readStates = database.transaction(ctx -> ctx.selectFrom(STATE)
         .where(DSL.field("connection_id").eq(connectionId))
-        .fetch().map(r -> Jsons.deserialize(r.get(DSL.field("state", JSONB.class)).data(), State.class))
-        .stream().toList();
+        .fetch().map(r -> Jsons.deserialize(r.get(DSL.field(STATE, JSONB.class)).data(), State.class))
+        .stream()
+        .toList());
     Assertions.assertEquals(1, readStates.size());
 
     Assertions.assertEquals(readStates.get(0).getState(), stateWrapper.getLegacyState());
-  }
-
-  @BeforeEach
-  public void beforeEach() throws DatabaseInitializationException, IOException, JsonValidationException {
-    dataSource = DatabaseConnectionHelper.createDataSource(container);
-    dslContext = DSLContextFactory.create(dataSource, SQLDialect.POSTGRES);
-    flyway = FlywayFactory.create(dataSource, DatabaseConfigPersistenceLoadDataTest.class.getName(),
-        ConfigsDatabaseMigrator.DB_IDENTIFIER, ConfigsDatabaseMigrator.MIGRATION_FILE_LOCATION);
-    database = new ConfigsDatabaseTestProvider(dslContext, flyway).create(true);
-    setupTestData();
-
-    statePersistence = new StatePersistence(database);
-  }
-
-  @AfterEach
-  public void afterEach() {
-    // Making sure we reset between tests
-    dslContext.dropSchemaIfExists("public").cascade().execute();
-    dslContext.createSchema("public").execute();
-    dslContext.setSchema("public").execute();
-  }
-
-  private void setupTestData() throws JsonValidationException, IOException {
-    configRepository = new ConfigRepository(
-        new DatabaseConfigPersistence(database, mock(JsonSecretsProcessor.class)),
-        database);
-
-    final StandardWorkspace workspace = MockData.standardWorkspaces().get(0);
-    final StandardSourceDefinition sourceDefinition = MockData.publicSourceDefinition();
-    final SourceConnection sourceConnection = MockData.sourceConnections().get(0);
-    final StandardDestinationDefinition destinationDefinition = MockData.publicDestinationDefinition();
-    final DestinationConnection destinationConnection = MockData.destinationConnections().get(0);
-    final StandardSync sync = MockData.standardSyncs().get(0);
-
-    configRepository.writeStandardWorkspace(workspace);
-    configRepository.writeStandardSourceDefinition(sourceDefinition);
-    configRepository.writeSourceConnectionNoSecrets(sourceConnection);
-    configRepository.writeStandardDestinationDefinition(destinationDefinition);
-    configRepository.writeDestinationConnectionNoSecrets(destinationConnection);
-    configRepository.writeStandardSyncOperation(MockData.standardSyncOperations().get(0));
-    configRepository.writeStandardSyncOperation(MockData.standardSyncOperations().get(1));
-    configRepository.writeStandardSync(sync);
-
-    connectionId = sync.getConnectionId();
   }
 
   private StateWrapper clone(final StateWrapper state) {
